gcc/testsuite/g++.dg/template/ttp22.C
@@ -1,0 +1,8 @@
+// PR c++/28860
+// { dg-do compile}
+
+template<template<int> class A>
+class A<0>;  // { dg-error "shadows template template parameter" }
+
+template<template<int> class B>
+class B<0> {};  // { dg-error "shadows template template parameter" }
